2021-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/svg.c (GetTransformTokens): Fix massive over-allocation
        of string due to use of AcquireString() on entire remaining text
        buffer. Addresses oss-fuzz 35171 "graphicsmagick:coder_SVG_fuzzer:
        Out-of-memory in coder_SVG_fuzzer".
        (GetTransformTokens): Apply an arbitrary limit on number of tokens
        to avoid DOS.
        (GetStyleTokens): Fix massive over-allocation of string due to use
        of AcquireString() on entire remaining text buffer.
        (GetStyleTokens): Don't use strlcpy() to copy token because it
        scans full text.
        (GetTransformTokens): Don't use strlcpy() to copy token because it
        scans full text.

2021-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (MSLStartElement): Use resource-managed memory
        allocator for msl_info->group_info and assure that memory is
        cleared so that empty group does not result in use of
        uninitialized data.  Addresses oss-fuzz 34869
        "graphicsmagick:coder_MSL_fuzzer: Use-of-uninitialized-value in
        MSLEndElement".

        * magick/memory.c (_MagickReallocateResourceLimitedMemory): Round
        up allocation size on small reallocs in order to lessen the number
        of actual reallocs.

2021-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/svg.c (SVGComment): Re-implement comment callback to be based on
        the managed-memory allocator and avoid excessive use of strlen().
        (SVGCharacters): Re-implement characters callback to to be based
        on the managed-memory allocator and avoid excessive use of
        strlen().  Addresses oss-fuzz 34168
        "graphicsmagick:coder_SVGZ_fuzzer: Timeout in coder_SVGZ_fuzzer".

        * magick/memory.c (_MagickResourceLimitedMemoryGetSizeAttribute):
        New private function to retrieve various integral size values from