@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210612"
-#define public MagickPackageReleaseDate "snapshot-20210612"
+#define public MagickPackageVersionAddendum ".020210622"
+#define public MagickPackageReleaseDate "snapshot-20210622"
