@@ -35,6 +35,11 @@
 <div class="document">
 
 
+<p>2021-06-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* coders/webp.c (ReadWEBPImage): Use SetImagePixelsEx() rather
+than GetImagePixelsEx() in reader.  Patch by Tobias Mark via
+SourceForge patch #66 &quot;Minor improvment webp&quot;.</blockquote>
 <p>2021-06-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 * coders/svg.c (GetTransformTokens): Fix massive over-allocation
