@@ -1,3 +1,9 @@
+2021-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * coders/webp.c (ReadWEBPImage): Use SetImagePixelsEx() rather
+        than GetImagePixelsEx() in reader.  Patch by Tobias Mark via
+        SourceForge patch #66 "Minor improvment webp".
+
 2021-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * coders/svg.c (GetTransformTokens): Fix massive over-allocation
